# ESP32-S3-Touch-ST7001-4.0-83112

./: .gitattributes
code/: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
code/components/esp_lcd_panel_io_additions/: idf_component.yml
code/components/esp_lcd_st7701/: idf_component.yml
code/components/esp_lcd_touch/: idf_component.yml
code/components/esp_lcd_touch_ft5x06/: idf_component.yml
code/components/lvgl/: lv_conf.h
code/components/lvgl/env_support/cmsis-pack/: LVGL.lvgl.8.3.11.pack
code/main/: CMakeLists.txt  main.c  project_config.h
code/main/driver/: driver_buzzer.c  driver_i2c.c  driver_nvs.c
code/main/driver/include/: driver_buzzer.h  driver_i2c.h  driver_nvs.h
code/main/service/: service_clock.c  service_lcd.c  service_lvgl_port.c  service_mqtt.c  service_ota.c  service_sntp.c  service_ui.c  service_ui_events.c  service_view.c  service_weather.c  service_wifi.c
code/main/service/include/: service_clock.h  service_lcd.h  service_lvgl_port.h  service_mqtt.h  service_ota.h  service_sntp.h  service_ui.h  service_ui_events.h  service_view.h  service_weather.h  service_wifi.h
code/main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h
code/main/ui/components/: ui_comp.c  ui_comp.h  ui_comp_containerclockitem.c  ui_comp_containerclockitem.h  ui_comp_containerdialog.c  ui_comp_containerdialog.h  ui_comp_containericon.c  ui_comp_containericon.h  ui_comp_containerloading.c  ui_comp_containerloading.h  ui_comp_containerselecttime.c  ui_comp_containerselecttime.h  ui_comp_containershortcut.c  ui_comp_containershortcut.h  ui_comp_containerweathercomp.c  ui_comp_containerweathercomp.h  ui_comp_hook.c  ui_comp_hook.h
code/main/ui/fonts/: ui_font_Font16.c  ui_font_Font22.c  ui_font_Font26.c
code/main/ui/images/: ui_img_1003441889.c  ui_img_1054422572.c  ui_img_1079156569.c  ui_img_1100213978.c  ui_img_1208312639.c  ui_img_1256750410.c  ui_img_1265361658.c  ui_img_131269067.c  ui_img_1338268307.c  ui_img_1371183408.c  ui_img_1373674343.c  ui_img_1457608042.c  ui_img_1593774066.c  ui_img_1643258164.c  ui_img_1668687438.c  ui_img_1714809594.c  ui_img_1807238698.c  ui_img_1828188889.c  ui_img_1860162427.c  ui_img_192374682.c  ui_img_1932134600.c  ui_img_1974460379.c  ui_img_1986875052.c  ui_img_2011621478.c  ui_img_2040269946.c  ui_img_2041795965.c  ui_img_2110933116.c  ui_img_303547358.c  ui_img_316677343.c  ui_img_372131849.c  ui_img_42750357.c  ui_img_450751469.c  ui_img_480230510.c  ui_img_508986726.c  ui_img_512722608.c  ui_img_53659793.c  ui_img_545021016.c  ui_img_679922800.c  ui_img_682944910.c  ui_img_693056743.c  (+26 more)
code/main/ui/screens/: ui_Screen404.c  ui_ScreenAbout.c  ui_ScreenAlarm.c  ui_ScreenAlarmClock.c  ui_ScreenClock.c  ui_ScreenLogo.c  ui_ScreenMain.c  ui_ScreenSetting.c  ui_ScreenShutCut.c  ui_ScreenUpdate.c  ui_ScreenWeather.c  ui_ScreenWiFiPassword.c  ui_ScreenWiFiSetting.c
code/main/utils/: utils_comm.c  utils_log.c
code/main/utils/include/: utils_comm.h  utils_log.h
code/天气图片/: ui_img_dawu60_png.c  ui_img_shachenbao80_png.c  ui_img_wushuju60_png.c  ui_img_xue60_png.c  ui_img_yintian60_png.c  ui_img_yu80_png.c
squareline/: SquareLine_Project.sll  SquareLine_Project.spj  SquareLine_Project_events.py
squareline/assets/: ui_font_Font100.c  ui_font_Font100.fcfg  ui_font_Font16.fcfg  ui_font_Font22.fcfg  ui_font_Font26.fcfg  ui_font_Font80.c  ui_font_Font80.fcfg
squareline/components/: ContainerClockItem.ecomp  ContainerDialog.ecomp  ContainerIcon.ecomp  ContainerLoading.ecomp  ContainerSelectTime.ecomp  ContainerShortCut.ecomp  ContainerWeatherComp.ecomp
