SET(SOURCES components/ui_comp_containerclockitem.c
    components/ui_comp_containerdialog.c
    components/ui_comp_containericon.c
    components/ui_comp_containerloading.c
    components/ui_comp_containerselecttime.c
    components/ui_comp_containershortcut.c
    components/ui_comp_containerweathercomp.c
    components/ui_comp.c
    screens/ui_ScreenLogo.c
    screens/ui_ScreenMain.c
    screens/ui_ScreenShutCut.c
    screens/ui_ScreenUpdate.c
    screens/ui_ScreenClock.c
    screens/ui_ScreenWeather.c
    screens/ui_ScreenAlarmClock.c
    screens/ui_ScreenAbout.c
    screens/ui_ScreenSetting.c
    screens/ui_ScreenWiFiSetting.c
    screens/ui_ScreenWiFiPassword.c
    screens/ui_Screen404.c
    screens/ui_ScreenAlarm.c
    ui.c
    components/ui_comp_hook.c
    ui_helpers.c
    ui_events.c
    images/ui_img_logo_png.c
    images/ui_img_1371183408.c
    images/ui_img_944254084.c
    images/ui_img_1643258164.c
    images/ui_img_480230510.c
    images/ui_img_1208312639.c
    images/ui_img_706350581.c
    images/ui_img_131269067.c
    images/ui_img_1100213978.c
    images/ui_img_372131849.c
    images/ui_img_img_short_cut_bg_png.c
    images/ui_img_53659793.c
    images/ui_img_1668687438.c
    images/ui_img_1593774066.c
    images/ui_img_2011621478.c
    images/ui_img_512722608.c
    images/ui_img_2040269946.c
    images/ui_img_1828188889.c
    images/ui_img_768181451.c
    images/ui_img_682944910.c
    images/ui_img_1003441889.c
    images/ui_img_762215214.c
    images/ui_img_192374682.c
    images/ui_img_1457608042.c
    images/ui_img_1986875052.c
    images/ui_img_781433378.c
    images/ui_img_2041795965.c
    images/ui_img_767529095.c
    images/ui_img_1338268307.c
    images/ui_img_1256750410.c
    images/ui_img_1373674343.c
    images/ui_img_303547358.c
    images/ui_img_864073061.c
    images/ui_img_82540831.c
    images/ui_img_42750357.c
    images/ui_img_1079156569.c
    images/ui_img_1807238698.c
    images/ui_img_1932134600.c
    images/ui_img_1054422572.c
    images/ui_img_img_localtion_sign_png.c
    images/ui_img_qing80_png.c
    images/ui_img_1860162427.c
    images/ui_img_1974460379.c
    images/ui_img_wushuju60_png.c
    images/ui_img_545021016.c
    images/ui_img_xue60_png.c
    images/ui_img_yintian60_png.c
    images/ui_img_yu60_png.c
    images/ui_img_shachenbao60_png.c
    images/ui_img_1714809594.c
    images/ui_img_add_png.c
    images/ui_img_693056743.c
    images/ui_img_679922800.c
    images/ui_img_httpszjgsyjc_com_png.c
    images/ui_img_img_wifi_setting_png.c
    images/ui_img_2110933116.c
    images/ui_img_508986726.c
    images/ui_img_img_mqtt_setting_png.c
    images/ui_img_1265361658.c
    images/ui_img_316677343.c
    images/ui_img_696096750.c
    images/ui_img_450751469.c
    # 新增
    images/ui_img_qing60_png.c
    images/ui_img_dawu60_png.c
    images/ui_img_duoyun60_png.c
    images/ui_img_leizhenyu60_png.c
    images/ui_img_shachenbao80_png.c
    images/ui_img_wushuju80_png.c
    images/ui_img_xue80_png.c
    images/ui_img_yintian80_png.c
    images/ui_img_yu80_png.c
    images/ui_img_zhenyu80_png.c


    fonts/ui_font_Font100.c
    fonts/ui_font_Font16.c
    fonts/ui_font_Font22.c
    fonts/ui_font_Font26.c
    fonts/ui_font_Font80.c)

add_library(ui ${SOURCES})
